# sony-camera-inbox-organizer

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md
src/camera_inbox/: __init__.py  app.py  config.py  converter.py  maker_note.py  media.py  mov_metadata.py  sony.py  state.py  worker.py
src/camera_inbox/static/: app.css  app.js
src/camera_inbox/templates/: base.html  dashboard.html  settings.html  yaml.html
tests/: test_app.py  test_config.py  test_converter.py  test_docs.py  test_maker_note.py  test_media.py  test_mov_metadata.py  test_publish_workflow.py  test_sony.py
