[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sony-camera-inbox-organizer"
version = "0.1.0"
description = "Convert Sony Shot Mark clips into Apple-compatible Live Photo pairs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "sony-camera-inbox-organizer contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.18,<1",
  "ruamel.yaml>=0.18,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.28,<1", "pytest>=8,<9"]

[project.scripts]
sony-camera-inbox = "camera_inbox.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/camera_inbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
